Fix for SideFX Windows build.
- Patch Findexpat.cmake and Findyaml-cpp.cmake to add the debug postfix
  to the debug library names.
- Patch ./src/OpenColorIO/CMakeLists.txt to add 'lib' prefix to static
  library names, and to add the debug postfix to the PDB file names.
- Patch FindImath.cmake so that the debug ocio library links to the
  debug Imath library on Windows.

--- a/src/OpenColorIO/CMakeLists.txt
+++ b/src/OpenColorIO/CMakeLists.txt
@@ -205,13 +205,14 @@ target_compile_features(OpenColorIO
     PUBLIC cxx_std_11
 )
 
-if(BUILD_SHARED_LIBS AND WIN32)
-    # Only use the versioned name with the dynamic library.
-    set(CMAKE_SHARED_LIBRARY_SUFFIX _${OpenColorIO_VERSION_MAJOR}_${OpenColorIO_VERSION_MINOR}.dll)
-
+if(WIN32)
+if(BUILD_SHARED_LIBS)
     # Create the version.rc file for the Windows DLL.
     configure_file(res/version.rc.in ${CMAKE_CURRENT_BINARY_DIR}/version.rc @ONLY)
     set(SOURCES ${SOURCES} ${CMAKE_CURRENT_BINARY_DIR}/version.rc)
+else()
+    set(OCIO_LIBNAME_PREFIX lib)
+endif()
 endif()
 
 
@@ -329,9 +330,9 @@ if(OCIO_USE_SSE)
     )
 endif()
 
-if(MSVC AND BUILD_TYPE_DEBUG AND BUILD_SHARED_LIBS)
+if(MSVC AND BUILD_SHARED_LIBS)
     set_target_properties(OpenColorIO PROPERTIES
-        PDB_NAME ${PROJECT_NAME}${OCIO_LIBNAME_SUFFIX}_${OpenColorIO_VERSION_MAJOR}_${OpenColorIO_VERSION_MINOR}
+	PDB_NAME ${OCIO_LIBNAME_PREFIX}${PROJECT_NAME}${OCIO_LIBNAME_SUFFIX}_${OpenColorIO_VERSION_MAJOR}_${OpenColorIO_VERSION_MINOR}${CMAKE_DEBUG_POSTFIX}
     )
 endif()
 
@@ -354,7 +355,7 @@ if(WIN32)
 endif()
 
 set_target_properties(OpenColorIO PROPERTIES
-    OUTPUT_NAME   ${PROJECT_NAME}${OCIO_LIBNAME_SUFFIX}
+    OUTPUT_NAME   ${OCIO_LIBNAME_PREFIX}${PROJECT_NAME}${OCIO_LIBNAME_SUFFIX}
     COMPILE_FLAGS "${PLATFORM_COMPILE_FLAGS}"
     VERSION       ${OpenColorIO_VERSION}
     SOVERSION     ${SOVERSION}
@@ -408,7 +409,7 @@ endif()
 install(TARGETS OpenColorIO
     EXPORT ${PROJECT_NAME}_EXPORTED_TARGETS
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    LIBRARY DESTINATION lib
+    ARCHIVE DESTINATION lib
     PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/OpenColorIO
 )
