--- a/src/OpenColorIO/CMakeLists.txt
+++ b/src/OpenColorIO/CMakeLists.txt
@@ -225,13 +225,15 @@ target_compile_features(OpenColorIO
     PUBLIC cxx_std_11
 )
 
-if(BUILD_SHARED_LIBS AND WIN32)
-    # Only use the versioned name with the dynamic library.
-    set(CMAKE_SHARED_LIBRARY_SUFFIX _${OpenColorIO_VERSION_MAJOR}_${OpenColorIO_VERSION_MINOR}.dll)
+if(WIN32)
+if(BUILD_SHARED_LIBS)
 
     # Create the version.rc file for the Windows DLL.
     configure_file(res/version.rc.in ${CMAKE_CURRENT_BINARY_DIR}/version.rc @ONLY)
     set(SOURCES ${SOURCES} ${CMAKE_CURRENT_BINARY_DIR}/version.rc)
+else()
+    set(OCIO_LIBNAME_PREFIX lib)
+endif()
 endif()
 
 
@@ -347,9 +349,9 @@ if(BUILD_SHARED_LIBS OR (OCIO_BUILD_PYTHON AND UNIX))
     set_property(TARGET OpenColorIO PROPERTY POSITION_INDEPENDENT_CODE ON)
 endif()
 
-if(MSVC AND BUILD_TYPE_DEBUG AND BUILD_SHARED_LIBS)
+if(MSVC AND BUILD_SHARED_LIBS)
     set_target_properties(OpenColorIO PROPERTIES
-        PDB_NAME ${PROJECT_NAME}${OCIO_LIBNAME_SUFFIX}_${OpenColorIO_VERSION_MAJOR}_${OpenColorIO_VERSION_MINOR}
+        PDB_NAME ${OCIO_LIBNAME_PREFIX}${PROJECT_NAME}${OCIO_LIBNAME_SUFFIX}_${OpenColorIO_VERSION_MAJOR}_${OpenColorIO_VERSION_MINOR}${CMAKE_DEBUG_POSTFIX}
     )
 endif()
 
@@ -418,7 +420,7 @@ if (OCIO_USE_SOVERSION)
 endif()
 
 set_target_properties(OpenColorIO PROPERTIES
-    OUTPUT_NAME   ${PROJECT_NAME}${OCIO_LIBNAME_SUFFIX}
+    OUTPUT_NAME   ${OCIO_LIBNAME_PREFIX}${PROJECT_NAME}${OCIO_LIBNAME_SUFFIX}
     COMPILE_OPTIONS "${PLATFORM_COMPILE_OPTIONS}"
     LINK_OPTIONS "${CUSTOM_LINK_FLAGS}"
     PUBLIC_HEADER "${INSTALL_HEADERS}"
@@ -432,7 +434,7 @@ endif()
 install(TARGETS OpenColorIO
     EXPORT ${PROJECT_NAME}_EXPORTED_TARGETS
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    LIBRARY DESTINATION lib
+    ARCHIVE DESTINATION lib
     PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/OpenColorIO
 )
