Remove -hidden-lexpat linker option for Apple clang < 12.
The -hidden-l option was added to Apple clang 12.
This fixes the build for Xcode 11.

This is a manual cherry-pick of
849dee201834d4367ece9043e243d64775d7e62e.
An automatic cherry-pick resulted in a conflict.

--- a/src/OpenColorIO/CMakeLists.txt
+++ b/src/OpenColorIO/CMakeLists.txt
@@ -368,7 +368,7 @@ if(UNIX AND NOT APPLE)
     # dependencies.
     set_property (TARGET OpenColorIO
                   APPEND PROPERTY LINK_FLAGS "-Wl,--exclude-libs,ALL")
-elseif(APPLE)
+elseif(APPLE AND CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 12 )
     if (expat_LIBRARY)
         get_filename_component(_expat_LIBDIR "${expat_LIBRARY}" DIRECTORY)
         # Add the path to CMake list of search paths for libraries.
